--- a/views/loginP.ejs
+++ b/views/loginP.ejs
@@ -28,13 +28,13 @@
             <table>
                 <tr>
                     <td>
-                        <input class='login_input' type="text" placeholder="아이디" / id="login_id" tabindex="1">
+                        <input class='login_input' type="text" placeholder="교수자 아이디" / id="login_id" tabindex="1">
                         </br>
                     </td>
 
                     <td rowspan="2">
-                        <button id="loginButton" tabindex="3">로그인</button>
-                        <button id="loginS">학생 전용</button>
+                        <button id="loginButton" class="loginBtn_P" tabindex="3">로그인</button>
+                        <button id="loginS" class="loginS_P">학생 전용</button>
                     </td>
 
                 </tr>
