--- a/views/mainP.ejs
+++ b/views/mainP.ejs
@@ -71,7 +71,7 @@
             <div class="form-group">
                 <div class="col-sm-12">
                     <label for="firstName" class="col-sm-6 control-label">소개글</label>
-                    <textarea class="form-control col-sm-12" rows="10" readonly>dwqdqdgegw efw fe</textarea>
+                    <textarea class="form-control col-sm-12" rows="10" readonly>혹시 안드로이드 앱 공부 법이나 안드로이드 개발 관련하여 질문이 있는 학생들은 문의주세요. </textarea>
                 </div>
             </div>
 
