로그인 페이지 디자인 수정

--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -55,16 +55,6 @@ html{
     margin-top: 1%;
   }
 
-  .loginBtn_P {
-    background-color:#337ab7;
-    border-color: #337ab7;
-  }
-
-  .loginS_P {
-    background-color:#337ab7;
-    border-color: #337ab7;
-  }
-
   table p{
     color: lightgray;
     cursor: pointer;
@@ -110,3 +100,59 @@ html{
     }
   
   }
+
+.loginBtn_P {
+    background-color:#337ab7;
+    border-color: #337ab7;
+    outline: none !important;
+    transition: all .1333s ease-in;
+}
+
+.loginBtn_P:hover {
+    border-color: #337ab7 !important;
+    background-color: #4aabff !important;
+}
+
+.loginBtn {
+  background-color:brown;
+  border-color: brown;
+  outline: none !important;
+  transition: all .1333s ease-in;
+}
+
+.loginBtn:hover {
+  border-color: #d9534f !important;
+  background-color: #ff625d !important;
+}
+
+.loginForm {
+  padding-left: 4px;
+  margin-left: -3px;
+  border-color: white;
+  outline: none !important;
+  transition: all .1333s ease-in;
+}
+
+.loginForm:hover {
+  border-color: #d9534f !important;
+}
+
+.loginForm:focus {
+  border-color: #ff0000 !important;
+}
+
+.loginForm_P {
+  padding-left: 4px;
+  margin-left: -3px;
+  border-color: white;
+  outline: none !important;
+  transition: all .1333s ease-in;
+}
+
+.loginForm_P:hover {
+  border-color: #4aabff !important;
+}
+
+.loginForm_P:focus {
+  border-color: #337ab7 !important;
+}
