--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,25 +28,25 @@
             <table>
                 <tr>
                     <td>
-                        <input class='login_input' type="text" placeholder="아이디" / id="login_id" tabindex="1">
+                        <input class='login_input loginForm' type="text" placeholder="아이디" / id="login_id" tabindex="1">
                         </br>
                     </td>
 
                     <td rowspan="2">
-                        <button id="loginButton" tabindex="3">로그인</button>
-                        <button id="loginP">교직원 전용</button>
+                        <button id="loginButton" class="loginBtn" tabindex="3">로그인</button>
+                        <button id="loginP" class="loginBtn" tabindex="4">교직원 전용</button>
                     </td>
 
                 </tr>
                 <tr>
                     <td>
-                        <input class='login_input' type="password" placeholder="비밀번호" / id="login_password" tabindex="2">
+                        <input class='login_input loginForm' type="password" placeholder="비밀번호" / id="login_password" tabindex="2">
                     </td>
                 </tr>
                 <tr>
                     <td colspan="2">
-                        <p id="join_Button" tabindex="4">학생 회원가입</p>
-                        <p id="join_ButtonP" tabindex="4">교직원 회원가입</p>
+                        <p id="join_Button" tabindex="5">학생 회원가입</p>
+                        <p id="join_ButtonP" tabindex="6">교직원 회원가입</p>
                     </td>
                 </tr>
             </table>
