--- a/views/pslist.ejs
+++ b/views/pslist.ejs
@@ -35,10 +35,10 @@
 
 <div class="border-result">
   <div class="result-container">
-
 <div class="result_div">
-  <div id="pf_list_parent">
     <% for(var i=0; i<professors.length; i++) { %>
+  <div id="pf_list_parent">
+    
       <li id="" class="pf_list_item">
         <div class="container-fluid">
           <div class="row">
@@ -49,7 +49,7 @@
               </div>
 
               <div class="pflistcont1">
-                <span><%= professors[i].name %></span>
+                <span><%= professors[i].name %> 교수님</span>
               </div>
             </div>
 
@@ -66,7 +66,7 @@
             </div>
 
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-              <textarea class="area_intro" name="" id="pfintro_" cols="30" rows="10"><%= professors[i].introduce %></textarea>
+              <textarea class="area_intro" name="" id="pfintro_" cols="30" rows="10" readonly><%= professors[i].introduce %></textarea>
             </div>
           </div>
         </div>
