--- a/public/stylesheets/pslist.css
+++ b/public/stylesheets/pslist.css
@@ -10,9 +10,7 @@ body,html{
   flex-direction: column;
   align-items: center;
 }
-strong{
-  margin-left: 2%;
-}
+
 #pf_list_parent{
   margin-top: 3%;
 }
@@ -177,6 +175,9 @@ li{
   }
   #logo_Div{
       width: 43% !important;
+  }
+  span{
+    margin-left: 0;
   }
 }
 @media only screen and (max-width: 575px) and (min-width: 300px)  {
