--- a/views/pslist.ejs
+++ b/views/pslist.ejs
@@ -127,7 +127,7 @@
             <div class="modal-body modal_body_styler">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <label for="firstName" class="col-sm-12 control-label">받는 사람</label>
-                    <input type="text" id='recv_name<%= professors[i].id %>' value="<%= professors[i].name %>" class="form-control" >
+                    <input type="text" id='recv_name<%= professors[i].id %>' value="<%= professors[i].name %> 교수님" class="form-control" >
                 </div>
 
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
