--- a/views/specCompare.ejs
+++ b/views/specCompare.ejs
@@ -58,7 +58,7 @@
 
                         <div class="row">
 
-                            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" onclick="scoreGraph();">
+                            <div class="spec col-xs-4 col-sm-4 col-md-4 col-lg-4" onclick="scoreGraph();">
                                 <div class="tile" title="학점">
                                     <div class="tile_title">학점 </div>
                                     <div class="divider_h_o2">
@@ -68,7 +68,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" onclick="toeicGraph();">
+                            <div class="spec col-xs-4 col-sm-4 col-md-4 col-lg-4" onclick="toeicGraph();">
                                 <div class="tile" title="토익">
                                     <div class="tile_title">토익 </div>
                                     <div class="divider_h_o2">
@@ -78,7 +78,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" onclick="toSGraph();">
+                            <div class="spec col-xs-4 col-sm-4 col-md-4 col-lg-4" onclick="toSGraph();">
                                 <div class="tile" title="토익스피킹">
                                     <div class="tile_title">토스 </div>
                                     <div class="divider_h_o2">
@@ -88,7 +88,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                            <div class="spec col-xs-4 col-sm-4 col-md-4 col-lg-4">
                                 <div class="tile" title="오픽">
                                     <div class="tile_title">오픽 </div>
                                     <div class="divider_h_o2">
@@ -112,7 +112,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                            <div class="spec col-xs-4 col-sm-4 col-md-4 col-lg-4">
                                 <div class="tile" title="봉사 활동">
                                     <div class="tile_title">봉사 </div>
                                     <div class="divider_h_o2">
@@ -122,7 +122,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                            <div class="spec col-xs-4 col-sm-4 col-md-4 col-lg-4">
                                 <div class="tile" title="인턴쉽">
                                     <div class="tile_title">인턴 </div>
                                     <div class="divider_h_o2">
@@ -132,7 +132,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                            <div class="spec col-xs-4 col-sm-4 col-md-4 col-lg-4">
                                 <div class="tile" title="공모전">
                                     <div class="tile_title">공모전 </div>
                                     <div class="divider_h_o2">
@@ -142,7 +142,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                            <div class="spec col-xs-4 col-sm-4 col-md-4 col-lg-4">
                                 <div class="tile" title="해외 경험">
                                     <div class="tile_title">해외경험</div>
                                     <div class="divider_h_o2">
@@ -152,7 +152,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                            <div class="spec col-xs-4 col-sm-4 col-md-4 col-lg-4">
                                 <div class="tile" title="자격증">
                                     <div class="tile_title">자격증 </div>
                                     <div class="divider_h_o2">
