--- a/views/specCompare.ejs
+++ b/views/specCompare.ejs
@@ -241,15 +241,22 @@
     var d = '<%= toeiclow4 %>';
     var e = '<%= toeiclow5 %>';
     var f = '<%= toeiclow6 %>';
-    
+
       var labels = ["700 이하", "700~750", "750~800", "800~850", "850~900", "900~950", "950 이상"];
       var datas = [a,b,c,d,e,f];
       showGraph("TOEIC 점수 별 학생 분포도", labels, datas);
   }
 
   function toSGraph() {
-      var labels = ["Lv4 이하", "Lv5", "Lv6", "Lv7", "Lv8"];
-      var datas = [13, 17, 14, 9, 6];
+    var a = '<%= tosslow1 %>';
+    var b = '<%= tosslow4 %>';
+    var c = '<%= tosslow5 %>';
+    var d = '<%= tosslow6 %>';
+    var e = '<%= tosslow7 %>';
+    var f = '<%= tosslow8 %>';
+
+      var labels = ["미응시","Lv4 이하", "Lv5", "Lv6", "Lv7", "Lv8"];
+      var datas = [a,b,c,d,e,f];
       showGraph("TOEIC Speaking 점수 별 학생 분포도", labels, datas);
   }
   function newMsgCheck(){
