--- a/views/pslist.ejs
+++ b/views/pslist.ejs
@@ -45,7 +45,7 @@
 
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
               <div id="message_Div" data-toggle="modal" data-target="#toProf<%= professors[i].id %>">
-                <img id="message_Update" src="/images/message_Icon.png" height="13%"/>
+                <img id="message_Update" src="/images/message_Icon.png" height="20px"/>
               </div>
 
               <div class="pflistcont1">
