--- a/views/mainP.ejs
+++ b/views/mainP.ejs
@@ -79,6 +79,16 @@
                     <button type="button" class="btn btn-danger btn-block" id='reform'>수정하기</button>
                 </div>
             </div>
+            <div class="two row" style="display: none;">
+
+                <div class="two_Button col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                    <button type="button" id="reform_Cancel" class="btn btn-danger btn-block">취소</button>
+                </div>
+
+                <div class="two_Button col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                    <button type="button" id="reform_Button_DB" class="btn btn-danger btn-block">확인</button>
+                </div>
+            </div>
 
         </div>
     </div>
@@ -116,6 +126,7 @@
 
 
 
+
             </div>
         </div>
     </div>
@@ -131,47 +142,57 @@
         $('input').css('background', 'none').css('border', 'none').css('color', 'white');
         $('textarea').css('background', 'none').css('border', 'none').css('color', 'white');
         $('#reform').click(function () {
-
-            $(this).hide(500);
-            $('.two').show(500);
+            $(this).hide(300);
+            $('.two').show(300);
             $('input').css('background', 'white').css('border', 'none').css('color', 'black');
             $('textarea').css('background', 'white').css('border', 'none').css('color', 'black');
             $('input').removeAttr("readonly");
             $('textarea').removeAttr("readonly");
         })
+        $('#reform_Cancel').click(function () {
+            $('.two').hide(300);
+            $('#reform').show(300);
+            $('input').css('background', 'none').css('border', 'none').css('color', 'white');
+            $('textarea').css('background', 'none').css('border', 'none').css('color', 'white');
+            $('input').attr('readonly', 'true');
+            $('textarea').attr('readonly', 'true');
+        })
+        $('#reform_Button_DB').click(function(){
+            //여기
+        })
         function newMsgCheck() {
-                var blink = document.getElementById("message_Update");
-                blink.style.visibility = blink.style.visibility == "" ? "hidden" : "";
-            }
-            var newMsg;
-
-
-            $.get('/msg/msgList', function (data) {
-                $('#msg_list').html(data);
-            });
-
-            $.get('/msg/msgDetail', function (data) {
-                $('#msg_detail').html(data);
-            });
-        var a = '<%= new_msg %>';
-        //var i = false;
-        if(a) {
-          console.log('ok');
-          // setInterval(newMsgCheck, 500);
-          newMsg = setInterval(function(){
             var blink = document.getElementById("message_Update");
             blink.style.visibility = blink.style.visibility == "" ? "hidden" : "";
- 
-          }, 500);
+        }
+        var newMsg;
+
+
+        $.get('/msg/msgList', function (data) {
+            $('#msg_list').html(data);
+        });
+
+        $.get('/msg/msgDetail', function (data) {
+            $('#msg_detail').html(data);
+        });
+        var a = '<%= new_msg %>';
+        //var i = false;
+        if (a) {
+            console.log('ok');
+            // setInterval(newMsgCheck, 500);
+            newMsg = setInterval(function () {
+                var blink = document.getElementById("message_Update");
+                blink.style.visibility = blink.style.visibility == "" ? "hidden" : "";
+
+            }, 500);
         }
         else {
-          console.log('no');
-          clearInterval(newMsgCheck);
+            console.log('no');
+            clearInterval(newMsgCheck);
         }
 
-        $('#msgListCloseBtn').click(function(){
-          clearInterval(newMsg);
-          document.getElementById("message_Update").style.visibility = 'visible';
+        $('#msgListCloseBtn').click(function () {
+            clearInterval(newMsg);
+            document.getElementById("message_Update").style.visibility = 'visible';
         });
     </script>
 
