스펙 비교 스크롤 내리기

--- a/views/joinP.ejs
+++ b/views/joinP.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="theme-color" content="#9a0007">
+    <meta name="theme-color" content="#4aabff">
     <title>
         <%= title %>
     </title>
