--- a/views/loginP.ejs
+++ b/views/loginP.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#9a0007">
+    <meta name="theme-color" content="#4aabff">
     <link rel="stylesheet" type="text/css" href="/stylesheets/login.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
