--- a/views/mainP.ejs
+++ b/views/mainP.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="theme-color" content="#9a0007">
+    <meta name="theme-color" content="#4aabff">
     <title>
         <%= title %>
     </title>
