--- a/views/mainP.ejs
+++ b/views/mainP.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="theme-color" content="#4aabff">
+    <meta name="theme-color" content="#9a0007">
     <title>
         <%= title %>
     </title>
@@ -31,7 +31,7 @@
                 <div>
                     &nbsp;
                     <strong style="cursor:pointer">
-                        <%= title %>
+                        <%= user %>
                     </strong>
                 </div>
                 <div>
@@ -43,8 +43,8 @@
 
     <div class="article_div">
         <div class="user_div">
-            <h3 style="margin-left: auto;margin-right: auto;padding-left: 8px;color: rgb(255, 255, 255);">
-                한성진 교수님
+            <h3 style="margin-left: auto; margin-right: auto; padding-left: 8px; color: rgb(255, 255, 255);">
+                 <%= name %>교수님
             </h3>
         </div>
 
@@ -57,36 +57,36 @@
 
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" id="job">
                 <label for="firstName" class="col-sm-12 control-label">전공</label>
-                <input type="text" id="score" value="컴퓨터공학" readonly class="form-control">
+                <input type="text" id="score"  value="<%= major %>" readonly class="form-control">
             </div>
 
 
 
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="firstName" class="col-sm-12 control-label">이메일</label>
-                <input type="text" id="score" value="gkstjdwls11@naver.com" readonly class="form-control">
+                <input type="text" id="score" value="<%= email %>" readonly class="form-control">
             </div>
 
             <div class="form-group">
                 <div class="col-sm-12">
                     <label for="firstName" class="col-sm-6 control-label">소개글</label>
-                    <textarea class="form-control col-sm-12" rows="10" readonly>혹시 안드로이드 앱 공부 법이나 안드로이드 개발 관련하여 질문이 있는 학생들은 문의주세요. </textarea>
+                    <textarea class="form-control col-sm-12" rows="10" readonly><%= introduce %></textarea>
                 </div>
             </div>
 
             <div class="form-group" id="join_Button">
                 <div class="col-sm-6 col-sm-offset-3">
-                    <button type="button" class="btn btn-danger btn-block" id='reform'>수정하기</button>
+                    <button type="button" class="btn btn-danger btn-block" id='reform' style = "margin-top : 15px;">수정하기</button>
                 </div>
             </div>
             <div class="two row" style="display: none;">
 
                 <div class="two_Button col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                    <button type="button" id="reform_Cancel" class="btn btn-danger btn-block">취소</button>
+                    <button type="button" id="reform_Cancel" class="btn btn-danger btn-block" style = "margin-top : 15px;">취소</button>
                 </div>
 
                 <div class="two_Button col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                    <button type="button" id="reform_Button_DB" class="btn btn-danger btn-block">확인</button>
+                    <button type="button" id="reform_Button_DB" class="btn btn-danger btn-block" style = "margin-top : 15px;">확인</button>
                 </div>
             </div>
 
