--- a/public/stylesheets/pslist.css
+++ b/public/stylesheets/pslist.css
@@ -24,7 +24,7 @@ li{
 
 }
 body {
-  background: url('/images/spec_Compare_Page_Image.png') no-repeat center center fixed;
+  background: url('/images/mainP2.png') no-repeat center center fixed;
 }
 
 #logo_Image{
