--- a/public/stylesheets/mainP.css
+++ b/public/stylesheets/mainP.css
@@ -11,7 +11,9 @@ body,html{
     flex-direction: column;
     align-items: center;
 }
-
+#logo_Div{
+    height: 100%;
+}
 #logo_Image{
     margin-left: 3%;
     cursor: pointer;
