--- a/public/stylesheets/mypage.css
+++ b/public/stylesheets/mypage.css
@@ -56,6 +56,9 @@ body,html{
     width: 100%;
     height: 91%;
 }
+#logo_Div{
+    height: 100%;
+}
 #menu_Div{
     width: 100%;
     height: 13%;
