--- a/public/stylesheets/userSearch.css
+++ b/public/stylesheets/userSearch.css
@@ -131,7 +131,9 @@ body,html{
     justify-content: left;
     color: white;
 }
-
+#logo_Div{
+    height: 100%;
+}
 .form_control_styler {
     width: 100%;
     height: 36px;
