--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -85,13 +85,13 @@
 
                         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                             <label for="firstName" class="col-sm-12 control-label">토스-Toeic Speaking</label>
-                            <input type="text" id="score_toss" value= <%= rows[0].toss_num %>  readonly class="form-control">
+                            <input type="text" id="score_toss" value= "<%= rows[0].toss_num %>"  readonly class="form-control">
                         </div>
 
 
                         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                             <label for="firstName" class="col-sm-12 control-label">오픽-Opic</label>
-                            <input type="text" id="score_opic" value= <%= rows[0].opic_num %>  readonly class="form-control">
+                            <input type="text" id="score_opic" value= "<%= rows[0].opic_num %>"  readonly class="form-control">
                         </div>
 
 
