--- a/views/mainP.ejs
+++ b/views/mainP.ejs
@@ -44,7 +44,7 @@
     <div class="article_div">
         <div class="user_div">
             <h3 style="margin-left: auto; margin-right: auto; padding-left: 8px; color: rgb(255, 255, 255);">
-                 <%= name %> 교수님
+                 <%= result[0].name %> 교수님
             </h3>
         </div>
 
@@ -57,20 +57,20 @@
 
             <div class="data col-xs-6 col-sm-6 col-md-6 col-lg-6" id="job">
                 <label for="firstName" class="col-sm-12 control-label">전공</label>
-                <input type="text" id="score"  value="-<%= major %>" readonly class="form-control">
+                <input type="text" id="major"  value="<%= result[0].major %>" readonly class="form-control">
             </div>
 
 
 
             <div class="data col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="firstName" class="col-sm-12 control-label">이메일</label>
-                <input type="text" id="score" value="-<%= email %>" readonly class="form-control">
+                <input type="text" id="email" value="<%= result[0].email %>" readonly class="form-control">
             </div>
 
             <div class="form-group">
                 <div class="col-sm-12">
                     <label for="firstName" class="data col-sm-6 control-label">소개글</label>
-                    <textarea class="form-control col-sm-12" rows="10" readonly><%= introduce %></textarea>
+                    <textarea class="form-control col-sm-12" id ="introduce" rows="10" readonly><%= result[0].introduce %></textarea>
                 </div>
             </div>
 
@@ -158,7 +158,34 @@
             $('textarea').attr('readonly', 'true');
         })
         $('#reform_Button_DB').click(function(){
-            //여기
+            var major = $('#major').val();
+            var email = $('#email').val();
+            var introduce = $('#introduce').val();
+
+            var data ={
+              'major' : major,
+              'email' : email,
+              'introduce' : introduce
+            };
+
+            console.log(data);
+            $.ajax({ // ajax 통신으로 지원자 입력한 정보를 서버에 보낸다.
+                  type:'POST',
+                  url:'/regoApplyP',
+                  contentType:'application/x-www-form-urlencoded; charset=UTF-8',
+                  cache:false,
+                  dataType:'json',
+                  data:data,
+                  success:function(result){
+                    if(result['result']=='success'){
+                      alert('수정되었습니다.');
+                      $(window).attr('location','/mainP');
+                    }//result if
+                  },
+                  error:function(error){
+                    console.log('erer');
+                  }
+            });
         })
         function newMsgCheck() {
             var blink = document.getElementById("message_Update");
