--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -13,6 +13,9 @@ html{
     background-attachment: fixed;
     margin: 0;
   }
+  #user_Input img{
+    height: 32px;
+}
   #top_Div{
     width: 100%;
     height: 55%;
