--- a/public/stylesheets/mainP.css
+++ b/public/stylesheets/mainP.css
@@ -102,7 +102,9 @@ label{
     align-items: center;
     position: relative;
 }
-
+#user_Input img{
+    height: 32px;
+}
 .tile_title {
     display: flex;
     color: #efefef;
