--- a/public/stylesheets/specCompare.css
+++ b/public/stylesheets/specCompare.css
@@ -14,6 +14,9 @@ body,html{
 #logo_Div{
     height: 100%;
 }
+#user_Input img{
+    height: 32px;
+}
 #logo_Image{
     margin-left: 3%;
     cursor: pointer;
