--- a/public/stylesheets/userSearch.css
+++ b/public/stylesheets/userSearch.css
@@ -14,6 +14,9 @@ body,html{
 .std_list_right,.std_list_left{
     color: white;
 }
+#user_Input img{
+    height: 32px;
+}
 #logo_Image{
     margin-left: 3%;
     cursor: pointer;
